[metadata]
name = evomaster-client
version = 0.0.7
author = Axel Maddonni
author_email = axel.maddonni@gmail.com
description = EvoMaster client for Python Flask RESTful applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/axelmaddonni/EvoMaster
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Framework :: Flask
    Topic :: Software Development :: Testing

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    click>=7.1.2
    gevent>= 20.9.0
    astor>=0.8.1

[options.packages.find]
include =
    evomaster_client*
