[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evomaster"
version = "0.1.3"
description = "EvoMaster: The first open-source AI-driven tool for automatically generating system-level test cases (also known as fuzzing) for web/enterprise applications. Currently targeting whitebox and blackbox testing of Web APIs, like REST, GraphQL and RPC (e.g., gRPC and Thrift). "
readme = "README.md"
authors = [
    {name = "Andrea Arcuri", email = "arcuri82@gmail.com"}
]
license = {text = "LGPL"}

[project.urls]
Homepage = "https://github.com/WebFuzzing/EvoMaster"
Issues = "https://github.com/WebFuzzing/EvoMaster/issues"


[project.scripts]
evomaster = "evomaster.__main__:main"

