[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evomaster"
version = "0.2.0"
description = "EvoMaster: The first open-source AI-driven tool for automatically generating system-level test cases (also known as fuzzing) for web/enterprise applications. Currently targeting whitebox and blackbox testing of Web APIs, like REST, GraphQL and RPC (e.g., gRPC and Thrift). "
readme = "README.md"
authors = [
    {name = "Andrea Arcuri", email = "arcuri82@gmail.com"}
]
license = {text = "LGPL"}

[project.urls]
Homepage = "https://github.com/WebFuzzing/EvoMaster"
Issues = "https://github.com/WebFuzzing/EvoMaster/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evomaster = ["release/**","_dummy.c"]

## ARGHHHHHHH what the f**k!!!
## No option to say that this is not a "pure" Python portable project???
## and have to use these "tricks" to fool the build tool? really WTF?!?
## Now even trying to have a dummy C file...
[tool.setuptools]
zip-safe = false
[tool.setuptools.ext-modules]
dummy = { sources = ["src/evomaster/_dummy.c"] }


[project.scripts]
evomaster = "evomaster.__main__:main"




###  Release
# rm -r dist
# python3 -m build
# python3 -m twine upload dist/*