[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evomaster"
version = "6.1.2"
description = "EvoMaster: The first open-source AI-driven tool for automatically generating system-level test cases (also known as fuzzing) for web/enterprise applications. Currently targeting whitebox and blackbox testing of Web APIs, like REST, GraphQL and RPC (e.g., gRPC and Thrift). "
readme = "README.md"
authors = [
    {name = "Andrea Arcuri", email = "arcuri82@gmail.com"}
]
license = {text = "LGPL"}
dependencies = [
    "requests>=2.0.0",
    "tqdm>=4.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/WebFuzzing/EvoMaster"
Issues = "https://github.com/WebFuzzing/EvoMaster/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
evomaster = "evomaster.__main__:main"




###  Release
# rm -r dist
# python3 -m build
# python3 -m twine upload dist/*

### For testing
# pip3 install --force-reinstall dist/evomaster-*.whl